--- a/README.textile
+++ b/README.textile
@@ -4,5 +4,7 @@ A command line tool for generating scrum cards from jira.
 
 h1. Examples
 
+<pre>
 jira-cards issues --keys foo-1..foo-10 --output c:\temp\test.pdf
 jira-cards iteration --project "Some project" --version "Iteration 30" --output c:\temp\test.pdf
+</pre>
